# FlexServ-Deployer

./: .gitignore  Cargo.toml  README.md  run-tests.sh
.github/workflows/: publish-flexserv-bundle.yml
examples/: call_pod.rs  create_pod.rs  hash_demo.rs  hpc_cancel_job.rs  hpc_create.rs  hpc_poll_status.rs  hpc_resubmit_job.rs  pod_monitor.rs  pod_start_stop.rs  terminate_pod.rs
hpc_archive/: tapisjob.manifest
hpc_archive/app/: run_flexserv.sh
jupyter/: pod_deploy_rs.ipynb
src/: backend.rs  base62.rs  deployment.rs  deployment_legacy.rs  lib.rs  main.rs  server.rs  utils.rs
src/deployment/: hpc.rs  mod.rs  pod.rs
tapis_def/1.3.0/: job.json
tapis_def/1.4.0/: 2026-03-nairr-tutorial-test.ipynb  README.md  app.json  job.json  job_with_reservation.json  job_with_reservation_patch_image.json
tests/: integration_test.rs  pod_create_integration.rs  pod_monitor_integration.rs  pod_start_integration.rs  pod_stop_integration.rs  pod_terminate_integration.rs
