[package]
name = "flexserv-deployer"
version = "0.1.0"
edition = "2021"

[lib]
name = "flexserv_deployer"
path = "src/lib.rs"

[[bin]]
name = "flexserv-deployer-server"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.12.1" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = { version = "1.0.101" }
hf-hub = { version = "0.4.3" }
env_logger = "0.11"
log = "0.4"
sha2 = "0.10"

# Tapis SDK - commented out for now until properly configured
# tapis-sdk = { version = "0.1.1" }

[dev-dependencies]
actix-rt = "2.10"
