[package]
name = "flexserv-deployer"
version = "0.1.0"
edition = "2021"

[lib]
name = "flexserv_deployer"
path = "src/lib.rs"

[[bin]]
name = "flexserv-deployer-server"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.12.1" }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
reqwest-middleware = { version = "0.4", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = { version = "1.0.101" }
hf-hub = { version = "0.4.3" }
env_logger = "0.11"
log = "0.4"
sha2 = "0.10"

tapis-sdk = "0.2.0"

[dev-dependencies]
actix-rt = "2.10"
